--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ uproot = "5.0.4"
 mplhep = "0.3.31"
 awkward-pandas = "^2023.8.0"
 torch = "^2.3.0"
+torch_geometric = "^2.3.0"  # Añadir la versión de torch_geometric
+
 
 [tool.poetry.group.dev.dependencies]
 black = "23.12.1"
