incorporate classification of edges on the dataset.

--- a/configs/dataset_classification.yml
+++ b/configs/dataset_classification.yml
@@ -11,9 +11,13 @@ omtf_vars:
   - "omtfUPt"
 stub_vars:
   - "inputStubEtaG"
-  - "inputStubPhiG"
+  - "inputStubCosPhi"
+  - "inputStubSinPhi"
   - "inputStubR"
   - "inputStubLayer"
+  - "inputStubPhiG"
+  #- "inputStubLayOrder"
   - "inputStubType"
-target_vars:
   - "inputStubIsMatched"
+target_vars:
+  - "muonQOverPt"
