Generate InputDataset from L1Nano

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,12 +28,13 @@ packages = [
 python = "^3.11.0"
 awkward = "2.5.2"
 matplotlib = "3.8.2"
-numpy = "1.23.4"
+numpy = "1.26.4"
 pandas = "2.1.4"
-scipy = "1.10.1"
+scipy = "1.11.4"
 uproot = "5.0.4"
 mplhep = "0.3.31"
 awkward-pandas = "^2023.8.0"
+pyyaml = "^6.0"
 torch = "^2.3.0"
 torch_geometric = "^2.3.0"  # Añadir la versión de torch_geometric
 scikit-learn = "^1.7"
